--- a/Home/about_8_0_0/index.html
+++ b/Home/about_8_0_0/index.html
@@ -7,53 +7,112 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SCI FRAMEWORK</title>
     <link rel="stylesheet" type="text/css" href="../../media/css/style.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="css/about_8_0_0.css" /> -->
-    <script src="../../media/dist/jquery.min.js"></script>
-    <script src="../../media/dist/lib.js"></script>
+    <script src="../../media/js/lib-min.js"></script>
 </head>
 
 <body>
+    <link rel="stylesheet" type="text/css" href="css/about_8_0_0.css" />
     <section class="about_8_0_0">
         <div class="container">
-            <div class="about_8_0_0__title">Trị hôi nách triệt để</div>
-            <div class="about_8_0_0__line"></div>
-            <div class="row">
-                <div class="col-lg-4 col-12 col-md-4 ">
-                    <a href="#">
-                        <div class="about_8_0_0__item">
-                            <div class="about_8_0_0__pic">
-                                <img src="images/a-1.jpg" alt="">
-                            </div>
-                            <div class="about_8_0_0__tt">Got Mat VLine 3D</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu egestas ante. Aliquam feugiat massa sit amet malesuada accumsan. Donec elementum quam ac lorem eleifend facilisis. Vivamus vitae sapien ac libero pulvinar tempor et a massa. Duis condimentum ipsum ut sem aliquam scelerisque.</p>
-                        </div>
-                    </a>
+            <div class="pc">
+                <div class="about_8_0_0__title">THƯƠNG HIỆU ĐÔNG Á</div>
+                <div class="about_8_0_0__line"></div>
+                <div class="about_8_0_0__box">
+                    <div class="about_8_0_0__item">
+                        <div class="about_8_0_0__tt"><a>HỆ THỐNG<br> THẨM MỸ VIỆN</a></div>
+                        <div class="about_8_0_0__tt "><a>CN HÀ NỘI</a></div>
+                        <div class="about_8_0_0__tt"><a>CN HẢI PHÒNG</a></div>
+                        <div class="about_8_0_0__tt"><a>CN NGHỆ AN </a></div>
+                        <div class="about_8_0_0__tt"><a>CN ĐÀ NẴNG </a></div>
+                        <div class="about_8_0_0__tt"><a>CN BÌNH DƯƠNG</a> </div>
+                        <div class="about_8_0_0__tt"><a>CN CẦN THƠ </a></div>
+                        <div class="about_8_0_0__tt"><a>CN TP.HỒ CHÍ MINH</a></div>
+                        <div class="about_8_0_0__tt"><a>CN THANH HÓA</a></div>
+                        <div class="about_8_0_0__tt"><a>CN BẮC NINH</a></div>
+                    </div>
+                    <div class="about_8_0_0__item">
+                        <div class="about_8_0_0__tt"><a>BỆNH VIỆN<br> THẨM MỸ</a></div>
+                        <div class="about_8_0_0__tt"><a>Phòng đón tiếp tư vấn</a></div>
+                        <div class="about_8_0_0__tt"><a>Khoa khám bệnh và chẩn đoán hình ảnh</a></div>
+                        <div class="about_8_0_0__tt"><a>Khoa phẫu thuật gây tê</a></div>
+                        <div class="about_8_0_0__tt"><a>Khoa phẫu thuật gây mê</a></div>
+                        <div class="about_8_0_0__tt"><a>Khoa chăm sóc sau phẫu thuật</a></div>
+                        <div class="about_8_0_0__tt"><a>Khoa điều trị da liễu </a></div>
+                        <div class="about_8_0_0__tt"><a>Phòng kế hoạch tổng hợp </a></div>
+                        <div class="about_8_0_0__tt"><a>Phòng hành chính quản trị</a></div>
+                        <div class="about_8_0_0__tt"><a>Phòng đón tiếp tư vấn</a></div>
+    
+                    </div>
+                    <div class="about_8_0_0__item">
+                        <div class="about_8_0_0__tt"><a>HỘI ĐỒNG<br>CHUYÊN MÔN</a></div>
+                        <div class="about_8_0_0__tt "><a>Hội đồng chuyên môn Phẫu thuật</a></div>
+                        <div class="about_8_0_0__tt "><a>Hội đồng chuyên môn da liễu</a></div>
+                        <div class="about_8_0_0__tt "><a>Trung tâm R&D</a></div>
+                    </div>
+                    <div class="about_8_0_0__item">
+                        <div class="about_8_0_0__tt"><a>KHỐI SALE<br> & MARKETING</a></div>
+                        <div class="about_8_0_0__tt "><a>Phòng Marketing</a></div>
+                        <div class="about_8_0_0__tt "><a>Phòng Chăm sóc khách hàng</a></div>
+                    </div>
+                    <div class="about_8_0_0__item">
+                        <div class="about_8_0_0__tt"><a>HỘI ĐỒNG<br> CHUYÊN MÔN</a></div>
+                        <div class="about_8_0_0__tt "><a>Hành chính nhân sự</a></div>
+                        <div class="about_8_0_0__tt "><a>Xây dựng sửa chữa</a></div>
+                        <div class="about_8_0_0__tt "><a>Kế toán</a></div>
+                        <div class="about_8_0_0__tt "><a>Công nghệ thông tin</a></div>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <a href="#">
-                        <div class="about_8_0_0__item">
-                            <div class="about_8_0_0__pic">
-                                <img src="images/a-2.jpg" alt="">
-                            </div>
-                            <div class="about_8_0_0__tt">bảo hành trọn đời</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu egestas ante. Aliquam feugiat massa sit amet malesuada accumsan. Donec elementum quam ac lorem eleifend facilisis. Vivamus vitae sapien ac libero pulvinar tempor et a massa. Duis condimentum ipsum ut sem aliquam scelerisque.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-4 col-12">
-                    <a href="#">
-                        <div class="about_8_0_0__item">
-                            <div class="about_8_0_0__pic">
-                                <img src="images/a-3.jpg" alt="">
-                            </div>
-                            <div class="about_8_0_0__tt">đội ngũ bác sĩ chuyên môn cao</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu egestas ante. Aliquam feugiat massa sit amet malesuada accumsan. Donec elementum quam ac lorem eleifend facilisis. Vivamus vitae sapien ac libero pulvinar tempor et a massa. Duis condimentum ipsum ut sem aliquam scelerisque.</p>
-                        </div>
-                    </a>
-                </div>
-                
+            </div>
+            <div class="mb">
+                <div class="about_8_0_0__title">THƯƠNG HIỆU ĐÔNG Á</div>
+                <div class="accordions">
+                    <button class="accordions-title accordions-title-st active">HỆ THỐNG THẨM MỸ VIỆN</button>
+                    <div class="accordions-content accordions-content_active" style="max-height: max-content">
+                        <div class="accordions-content__tt"><a>CN HÀ NỘI</a></div>
+                        <div class="accordions-content__tt"><a>CN HẢI PHÒNG</a></div>
+                        <div class="accordions-content__tt"><a>CN NGHỆ AN</a></div>
+                        <div class="accordions-content__tt"><a>CN ĐÀ NẴNG </a></div>
+                        <div class="accordions-content__tt"><a>CN BÌNH DƯƠNG</a></div>
+                        <div class="accordions-content__tt"><a>CN CẦN THƠ</a></div>
+                        <div class="accordions-content__tt"><a>CN TP.HỒ CHÍ MINH</a></div>
+                        <div class="accordions-content__tt"><a>CN THANH HÓA</a></div>
+                        <div class="accordions-content__tt"><a>CN BẮC NINH</a></div>
+                    </div>
+                    <button class="accordions-title ">BỆNH VIỆN THẨM MỸ</button>
+                    <div class="accordions-content">
+                        <div class="accordions-content__tt"><a>Phòng đón tiếp tư vấn</a></div>
+                        <div class="accordions-content__tt"><a>Khoa khám bệnh và chẩn đoán hình ảnh</a></div>
+                        <div class="accordions-content__tt"><a>Khoa phẫu thuật gây tê</a></div>
+                        <div class="accordions-content__tt"><a>Khoa phẫu thuật gây mê </a></div>
+                        <div class="accordions-content__tt"><a>Khoa chăm sóc sau phẫu thuật</a></div>
+                        <div class="accordions-content__tt"><a>Khoa điều trị da liễu</a></div>
+                        <div class="accordions-content__tt"><a>Phòng kế hoạch tổng hợp </a></div>
+                        <div class="accordions-content__tt"><a>Phòng hành chính quản trị</a></div>
+                        <div class="accordions-content__tt"><a>Phòng đón tiếp tư vấn</a></div>
+                    </div>
+                    <button class="accordions-title">HỘI ĐÒNG CHUYÊN MÔN</button>
+                    <div class="accordions-content">
+                        <div class="accordions-content__tt"><a>Hội đồng chuyên môn Phẫu thuật</a></div>
+                        <div class="accordions-content__tt"><a>Hội đồng chuyên môn da liễu</a></div>
+                        <div class="accordions-content__tt"><a>Trung tâm R&D</a></div>
+                    </div>
+                    <button class="accordions-title">KHỐI SALE & MARKETING</button>
+                    <div class="accordions-content">
+                        <div class="accordions-content__tt"><a>Phòng Marketing</a></div>
+                        <div class="accordions-content__tt"><a>Phòng Chăm sóc khách hàng</a></div>
+                    </div>
+                    <button class="accordions-title">HỘI ĐÒNG CHUYÊN MÔN</button>
+                    <div class="accordions-content">
+                        <div class="accordions-content__tt"><a>Hành chính nhân sự</a></div>
+                        <div class="accordions-content__tt"><a>Xây dựng sửa chữa</a></div>
+                        <div class="accordions-content__tt"><a>Kế toán</a></div>
+                        <div class="accordions-content__tt"><a>Công nghệ thông tin</a></div>
+                    </div>
+                </div> 
             </div>
         </div>
     </section>
+    <script src="js/about_8_0_0.js"></script>
+
 </body>
 </html>
