--- a/Home/basic_3_0_0/index.html
+++ b/Home/basic_3_0_0/index.html
@@ -25,42 +25,42 @@
                     <img src="./images/basis_img1.jpg" alt="">
                     <div class="basis_3_0_0__heading">
                         <p class="basis_3_0_0__name">Niềng răng 3D Speed</p>
-                        <a class="btn" href="">Xem thêm >></a>
+                        <a class="basis_3_0_0__more" href="">Xem thêm >></a>
                     </div>
                 </div>
                 <div class="basis_3_0_0__item">
                     <img src="./images/basis_img2.jpg" alt="">
                     <div class="basis_3_0_0__heading">
                         <p class="basis_3_0_0__name">Bọc răng sứ nano 5S</p>
-                        <a class="btn" href="">Xem thêm >></a>
+                        <a class="basis_3_0_0__more" href="">Xem thêm >></a>
                     </div>
                 </div>
                 <div class="basis_3_0_0__item">
                     <img src="./images/basis_img3.jpg" alt="">
                     <div class="basis_3_0_0__heading">
                         <p class="basis_3_0_0__name">Trồng răng Implant 4s</p>
-                        <a class="btn" href="">Xem thêm >></a>
+                        <a class="basis_3_0_0__more" href="">Xem thêm >></a>
                     </div>
                 </div>
                 <div class="basis_3_0_0__item">
                     <img src="./images/basis_img4.jpg" alt="">
                     <div class="basis_3_0_0__heading">
                         <p class="basis_3_0_0__name">Phẫu huật hàm hô</p>
-                        <a class="btn" href="">Xem thêm >></a>
+                        <a class="basis_3_0_0__more" href="">Xem thêm >></a>
                     </div>
                 </div>
                 <div class="basis_3_0_0__item">
                     <img src="./images/basis_img5.jpg" alt="">
                     <div class="basis_3_0_0__heading">
                         <p class="basis_3_0_0__name">Da liễu</p>
-                        <a class="btn" href="">Xem thêm >></a>
+                        <a class="basis_3_0_0__more" href="">Xem thêm >></a>
                     </div>
                 </div>
                 <div class="basis_3_0_0__item">
                     <img src="./images/abc.png" alt="">
                     <div class="basis_3_0_0__heading">
                         <p class="basis_3_0_0__name">Phẫu thuật hàm móm</p>
-                        <a class="btn" href="">Xem thêm >></a>
+                        <a class="basis_3_0_0__more" href="">Xem thêm >></a>
                     </div>
                 </div>
     </section>
