--- a/Home/about_3_0_0/index.html
+++ b/Home/about_3_0_0/index.html
@@ -9,7 +9,7 @@
 
     <script src="../../media/js/lib-min.js"></script>
 
-    <title>Basis_3_0_0</title>
+    <title>About_3_0_0</title>
   </head>
   <body>
     <section class="about_3_3_0">
