--- a/Home/doctor_3_1_0/doctor_3_1_0.html
+++ b/Home/doctor_3_1_0/doctor_3_1_0.html
@@ -21,10 +21,12 @@
             </div>
             <div class="doctor_3_1_0__box">
                 <div class="doctor_3_1_0__item1">
-                    <img id="doctor_3_1_0__background" src="media/images/BSTram.png" alt="">
+                    <div class="doctor_3_1_0__background">
+                        <img id="doctor_3_1_0__background" src="media/images/BSTram.png" alt="">
+                    </div>
                     <div class="doctor_3_1_0_info">
                         <h2 class="doctor_3_1_0_name">TS. BS. Đàm Ngọc Trâm</h2>
-                        <span class="doctor_3_1_0_description">• Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris.<br>
+                        <span class="doctor_3_1_0_description">- Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris.<br>
                         • Thành viên Hiệp hội nha khoa thẩm mỹ châu Âu ESCD<br>
                         • Thành viên Hiệp hội implant thế giới ( ICOI : International Congress of <br>
                          Oral Implantologists được thành lập từ năm 1972 tại Hoa Kì)<br>
@@ -103,7 +105,7 @@
         {
             name: "<h3>ĐÀM NGỌC TRÂM</h3>",
             pic: "",
-            description: "• Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris.<br>• Thành viên Hiệp hội nha khoa thẩm mỹ châu Âu ESCD<br>• Thành viên Hiệp hội implant thế giới ( ICOI : International Congress of <br>Oral Implantologists được thành lập từ năm 1972 tại Hoa Kì)<br>• Thành viên hiệp hội nha sĩ Mĩ (ADA: American Dental Association )<br>• Thành viên hiệp hội ITI (International Team for Implantology)",
+            description: "- Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris.<br>- Thành viên Hiệp hội nha khoa thẩm mỹ châu Âu ESCD<br>- Thành viên Hiệp hội implant thế giới ( ICOI : International Congress of <br>Oral Implantologists được thành lập từ năm 1972 tại Hoa Kì)<br>- Thành viên hiệp hội nha sĩ Mĩ (ADA: American Dental Association )<br>- Thành viên hiệp hội ITI (International Team for Implantology)",
             id: 1,
             src: ''
         },
@@ -117,14 +119,14 @@
         {
             name: "<h3>PHILIP TAROTS</h3>",
             pic: "",
-            description: " Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris <br> GS chuyên ngành RHM  ĐH Montpelier Pháp <br> Thành viên Hiệp hội chỉnh hình răng hàm mặt Pháp<br> Thành viên “Tổ chức nghiên cứu chỉnh nha quốc tế Charles Tweed” TUCSON USA<br> Chứng nhận xuất sắc về Thực hành chỉnh nha  Hội đồng chỉnh nha Pháp.<br> Thực hành độc quyền chỉnh nha khay trong tại Avignon từ 1991 đến 2019",
+            description: "- Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris <br>- GS chuyên ngành RHM  ĐH Montpelier Pháp <br>- Thành viên Hiệp hội chỉnh hình răng hàm mặt Pháp<br>- Thành viên “Tổ chức nghiên cứu chỉnh nha quốc tế Charles Tweed” TUCSON USA<br>- Chứng nhận xuất sắc về Thực hành chỉnh nha  Hội đồng chỉnh nha Pháp.<br>- Thực hành độc quyền chỉnh nha khay trong tại Avignon từ 1991 đến 2019",
             id: 3,
             src: ''
         },
         {
             name: "<h3>NGUYỄN NGỌC LINH</h3>",
             pic: "",
-            description: "Tốt nghiệp Đại học Y Hà Nội, chuyên khoa răng hàm mặt<br>Chuyên gia phục hình răng Implant<br> Chứng chỉ chỉnh nha cơ bản",
+            description: "- Tốt nghiệp Đại học Y Hà Nội, chuyên khoa răng hàm mặt<br>- Chuyên gia phục hình răng Implant<br> - Chứng chỉ chỉnh nha cơ bản",
             id: 4,
             src: ''
         },
