--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -331,10 +331,10 @@
                     <div class="item1">
                         <a href="#" class="modal-btn modal-clip" data-video="clze85py9JU" data-modal="modal-clip">
                             <div class="pic">
-                                <img src="images/thumb-video-big.png">
+                                <img src="images/thumb-vid-1.jpg">
                             </div>
                             <div class="desc">
-                                HTLX mùa 5: Cô gái đệ nhất vẩu
+                                Nhật ký Phẫu thuật thẩm mỹ của Hot Tiktoker Hồng Anh
                             </div>
                         </a>
                     </div>
@@ -344,9 +344,9 @@
 
                     <div class="item2">
                         <a href="#" class="modal-btn modal-clip pic pic2" data-video="F1eR4TIKKrQ" data-modal="modal-clip">
-                            <img src="images/thumb-video-big.png">
+                            <img src="images/thumb-vid-2.jpg">
                             <div class="desc">
-                                HTLX mùa 5: Cô gái đệ nhất vẩu
+                                Diễn viên Bảo Tiên lột xác nóng bỏng sau nâng ngực
                             </div>
                         </a>
                         <div class="desc2">
@@ -355,9 +355,9 @@
                     </div>
                     <div class="item2">
                         <a href="#" class="modal-btn modal-clip pic pic2" data-video="W2yJZcDHUuM" data-modal="modal-clip">
-                            <img src="images/thumb-video-big.png">
+                            <img src="images/thumb-vid-4.jpg">
                             <div class="desc">
-                                HTLX mùa 5: Cô gái đệ nhất vẩu
+                                Nhật ký Hút mỡ của ca sĩ “ngoại cỡ” Philippines - Alvir Antoine
                             </div>
                         </a>
                         <div class="desc2">
@@ -367,9 +367,9 @@
                     <div class="item2">
                         <a href="#" class="modal-btn modal-clip pic pic2" data-video="trkW98oGg2E" data-modal="modal-clip">
 
-                            <img src="images/thumb-video-big.png">
+                            <img src="images/thumb-vid-3.jpg">
                             <div class="desc">
-                                HTLX mùa 5: Cô gái đệ nhất vẩu
+                                Hành trình chinh phục Đại sứ hoàn mỹ của người đẹp chuyển giới Trần Ngọc Sang
                             </div>
                         </a>
                         <div class="desc2">
@@ -463,8 +463,7 @@
                     <div class="footer_5_0_0Item-city__name">tp. hồ chí minh</div>
                     <div class="footer_5_0_0Item-city__contact">
                         <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"><span><img
-                                    src="images/icon-map.png"></span>84A
-                            Bà Huyện Thanh Quan, P.09, Q.03, TP. Hồ Chí Minh</a>
+                                    src="images/icon-map.png"></span>666 Cách mạng tháng 8, P5, Q. Tân Bình, Tp.HCM</a>
                         <div class="footer_5_0_0Item__contact-hot">
                             <span><img src="images/icon-call.png"></span>
                             <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:024.73.00.64.66">024.73.00.64.66</a>
@@ -473,7 +472,7 @@
                     </div>
                 </div>
                 <div class="footer_5_0_0Item-hot">
-                    Hotline: 1900.6499
+                    Hotline: 19006466
                 </div>
             </div>
             <div class="footer_5_0_0Box footer_5_0_0Box2 ">
@@ -490,9 +489,7 @@
             </div>
             <div class="footer_5_0_0Item-gp">
 
-                <a class="footer_5_0_0-bct" href="http://online.gov.vn/Home/WebDetails/67588" rel="nofollow" target="_blank">
-                    <img src="images/bocongthuong.png" alt="Bộ công thương">
-                </a>
+
 
                 <p><img src="images/dcma.png"></p>
             </div>
