--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -50,7 +50,7 @@
                     <div class="header_20_0_0__box__section2">
                         <div class="header_20_0_0__boxLogo">
                             <a href="/">
-                                <img width="135" height="38" src="images/logo.svg" alt="">
+                                <img width="135" height="38" src="images/logo.png" alt="">
                             </a>
                         </div>
                         <div class="iconMidd header_20_0_0__boxNav" id="icon-menu">☰</div>
@@ -214,7 +214,7 @@
         </div>
 
     </section>
-    <script src="Home/slider_1_0_1/js/slider_1_0_1.js"></script>
+
 
     <link rel="stylesheet" type="text/css" href="Home/service_15_0_0/css/service_15_0_0.css" />
     <div class="service_15_0_0">
@@ -273,7 +273,7 @@
 
         </div>
     </div>
-    <script src="Home/service_15_0_0/js/service_15_0_0.js"></script>
+
 
     <link rel="stylesheet" type="text/css" href="Home/person_11_0_0/css/person_11_0_0.css" />
     <div class="person_11_0_0">
