--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -350,7 +350,7 @@
                             </div>
                         </a>
                         <div class="desc2">
-                            Một trong những thương hiệu thẩm mỹ hàng đầu Việt Nam đi đầu với công nghệ
+                            Nhật ký "độ loa" của diễn viên Bảo Tiên
                         </div>
                     </div>
                     <div class="item2">
@@ -361,7 +361,7 @@
                             </div>
                         </a>
                         <div class="desc2">
-                            Một trong những thương hiệu thẩm mỹ hàng đầu Việt Nam đi đầu với công nghệ
+                            Ca sĩ Philipines và hành trình Hút mỡ tại Kangnam
                         </div>
                     </div>
                     <div class="item2">
@@ -373,7 +373,7 @@
                             </div>
                         </a>
                         <div class="desc2">
-                            Một trong những thương hiệu thẩm mỹ hàng đầu Việt Nam đi đầu với công nghệ
+                            Trần Ngọc Sang thẩm mỹ theo đổi ước mơ
                         </div>
                     </div>
                 </div>
