--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -70,6 +70,9 @@
                             <li class="menuSub">
                                 <a href="#" class="header_20_0_0__box__item arr">Liên hệ</a>
                             </li>
+                            <li class="menuSub">
+                                <a href="PDF/index.html" class="header_20_0_0__box__item arr" target="_blank">Chất lượng</a>
+                            </li>
                         </ul>
 
 
