--- a/Home/doctor_3_1_0/doctor_3_1_0.html
+++ b/Home/doctor_3_1_0/doctor_3_1_0.html
@@ -116,7 +116,7 @@
                 100% BỘ ĐÔI BÁC SỸ RĂNG HÀM MẶT - THẨM MỸ <br> THĂM KHÁM - CHUẨN ĐOÁN VÀ GIẢI PHÁP CHUYÊN SÂU
             </div>
             <div class="doctor_3_1_0__information">
-                <img class="img_title" id="imgTitle" src="media/BSTram.png" alt="" />
+                <div class="img_title"><img id="imgTitle" src="media/BSTram.png" alt="" /></div>
                 <div class="description">
                     <h4 class="name">TS.BS. ĐÀM NGỌC TRÂM</h4>
                     <span class="des">. Giám đốc chuyên môn hệ thống chuỗi nha khoa PARIS <br>
@@ -204,7 +204,7 @@
             } else {
                 id = 0
             }
-        }, 1000)
+        }, 5000)
     </script>
 </body>
 
