--- a/Home/doctor_3_1_0/doctor_3_1_0.html
+++ b/Home/doctor_3_1_0/doctor_3_1_0.html
@@ -163,31 +163,31 @@
             pic: "",
             description: "- Bác sĩ chuyên khoa chỉnh hình 20 năm kinh nghiệm-<br> Cố Vấn chuyên môn cấp cao chương trình Hành Trình Lột Xác <br> - Trưởng khoa Chỉnh hàm hô móm - Chuyên khoa Răng Hàm Mặt Bệnh viện RHM Thẩm mỹ Paris ",
             id: 2,
-            src: 'media/doctor2-bg.jpg'
+            src: 'media/doctor2-bg.png'
         }, {
             name: "PHILIP TAROTS",
             pic: "",
             description: "- Giám đốc chuyên môn hệ thống chuỗi nha khoa Paris <br>- GS chuyên ngành RHM  ĐH Montpelier Pháp <br>- Thành viên Hiệp hội chỉnh hình răng hàm mặt Pháp<br>- Thành viên “Tổ chức nghiên cứu chỉnh nha quốc tế Charles Tweed” TUCSON USA<br>- Chứng nhận xuất sắc về Thực hành chỉnh nha  Hội đồng chỉnh nha Pháp.<br>- Thực hành độc quyền chỉnh nha khay trong tại Avignon từ 1991 đến 2019",
             id: 3,
-            src: 'media/doctor3-bg.jpg'
+            src: 'media/doctor3-bg.png'
         }, {
             name: "NGUYỄN NGỌC LINH",
             pic: "",
             description: "- Tốt nghiệp chuyên khoa Răng Hàm Mặt Đại học Y Hà Nội <br>- Chứng chỉ chuyên sâu trồng răng implant, Chỉnh nha<br>- Chuyên gia Bọc răng sứ thẩm mỹ với chứng chỉ quốc tế<br>- Có hơn 10 năm kinh nghiệm Thẩm mỹ RHM tại TP. Hồ Chí Minh",
             id: 4,
-            src: 'media/doctor4-bg.jpg'
+            src: 'media/doctor4-bg.png'
         }, {
             name: "VŨ MINH TÂN",
             pic: "",
             description: "- Bác sĩ phẫu thuật tạo hình - Bệnh viện Răng hàm mặt Thẩm mỹ Paris <br>- Tu nghiệp tại chuyên khoa PTTM Tại Châu  u<br>- Gần 10 năm kinh nghiệm PTTM tại TP. Hồ Chí Minh<br>- Cố vấn chuyên môn cho nhiều Thẩm mỹ viện, spa trên cả nước",
             id: 5,
-            src: 'media/doctor5.jpg'
+            src: 'media/doctor5.png'
         }, {
             name: "VŨ CÔNG NAM",
             pic: "",
             description: "- Tốt nghiệp tại Đại học Y dược TPHCM<br>- Chứng chỉ Ứng dụng Laser và Ánh sáng trong Da liễu<br>- Chứng chỉ các Khoá đào tạo thẩm mỹ Công nghệ cao Thermage, Picosure, Mesotherapy, Filler, Botox<br>- 10 năm kinh nghiệm tại các bệnh viện thẩm mỹ lớn tại thành phố Hồ Chí Minh<br>- Tu nghiệp chuyên ngành Da liễu tại BV Bundang – Đại học Quốc gia Seoul<br>- Có hơn 8.000 case Khách hàng thành công",
             id: 6,
-            src: 'media/doctor6.jpg'
+            src: 'media/doctor6.png'
         },
 
         ]
@@ -204,7 +204,7 @@
             } else {
                 id = 0
             }
-        }, 5000)
+        }, 1000)
     </script>
 </body>
 
