--- a/Home/doctor_3_1_0/doctor_3_1_0.html
+++ b/Home/doctor_3_1_0/doctor_3_1_0.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="../../media/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../media/sass/style.scss" />
     <script src="../../media/js/lib-min.js"></script>
 </head>
 
@@ -192,7 +192,7 @@
 
         ]
 
-        let id = 0;
+        let id = 1;
 
         setInterval(() => {
             if (id < doctor.length) {
@@ -204,8 +204,8 @@
             } else {
                 id = 0
             }
-        }, 1000)
+        }, 5000)
     </script>
 </body>
-
+<!-- https://docs.google.com/spreadsheets/d/1n5VdT3P2E2FCtTOeOcDbQGcTuIFEPWEa7CKvU-FaoX4/edit#gid=549322786 -->
 </html>
