--- a/Home/doctor_3_1_0/doctor_3_1_0.html
+++ b/Home/doctor_3_1_0/doctor_3_1_0.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="../../media/sass/style.scss" />
+    <link rel="stylesheet" type="text/css" href="../../media/css/style.css" />
     <script src="../../media/js/lib-min.js"></script>
 </head>
 
@@ -118,34 +118,34 @@
             <div class="doctor_3_1_0__information">
                 <div class="img_title"><img id="imgTitle" src="media/BSTram.png" alt="" /></div>
                 <div class="description">
-                    <h4 class="name">TS.BS. ĐÀM NGỌC TRÂM</h4>
+                    <h5 class="name">TS.BS. ĐÀM NGỌC TRÂM</h5>
                     <span class="des">. Giám đốc chuyên môn hệ thống chuỗi nha khoa PARIS <br>
                         . Thành viên Hiệp hội nha khoa thẩm mỹ châu âu ESCD</span>
                 </div>
                 <div class="doctor_3_1_0__list_doctor">
                     <div class="doctor">
                         <a href="#" class="modal-btn" data-modal="modal-pop1"><img src="media/doctor1.jpg" alt=""></a>
-                        <h4>TS. BS. ĐÀM NGỌC TRÂM</h4>
+                        <p>TS. BS. ĐÀM NGỌC TRÂM</p>
                     </div>
                     <div class="doctor">
                         <a href="#" class="modal-btn" data-modal="modal-pop2"><img src="media/doctor2.jpg" alt=""></a>
-                        <h4>BS. VICTOR VŨ</h4>
+                        <p>BS. VICTOR VŨ</p>
                     </div>
                     <div class="doctor">
                         <a href="#" class="modal-btn" data-modal="modal-pop3"><img src="media/doctor3.jpg" alt=""></a>
-                        <h4>PGS. TS. PHILIP TAROTS</h4>
+                        <p>PGS. TS. PHILIP TAROTS</p>
                     </div>
                     <div class="doctor">
                         <a href="#" class="modal-btn" data-modal="modal-pop4"><img src="media/doctor4.jpg" alt=""></a>
-                        <h4>BS. NGUYỄN NGỌC LINH</h4>
+                        <p>BS. NGUYỄN NGỌC LINH</p>
                     </div>
                     <div class="doctor">
                         <a href="#" class="modal-btn" data-modal="modal-pop5"><img src="media/doctor5.jpg" alt=""></a>
-                        <h4>BS. VŨ MINH TÂN</h4>
+                        <p>BS. VŨ MINH TÂN</p>
                     </div>
                     <div class="doctor">
                         <a href="#" class="modal-btn" data-modal="modal-pop6"><img src="media/doctor6.jpg" alt=""></a>
-                        <h4>BS. VÕ CÔNG NAM</h4>
+                        <p>BS. VÕ CÔNG NAM</p>
                     </div>
                 </div>
     </section>
@@ -207,5 +207,4 @@
         }, 5000)
     </script>
 </body>
-<!-- https://docs.google.com/spreadsheets/d/1n5VdT3P2E2FCtTOeOcDbQGcTuIFEPWEa7CKvU-FaoX4/edit#gid=549322786 -->
 </html>
