--- a/Home/basis_3_1_0/index.html
+++ b/Home/basis_3_1_0/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>basis_3_1_0</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/basis_3_1_0__main.css">
 </head>
 <body>
     <section class="basis_3_1_0">
@@ -15,7 +15,7 @@
             <div class="temp1__t3"><img src="img/t3-bg.jpg" alt=""><h3>QUY TRÌNH CHUẨN CHÂU ÂU</h3></div>
         </div>
         <div class="basis_3_1_0__temp temp2">
-            <img src="img/t4-bg.jpg" alt="">
+            <img src="img/t4-bg.jpg" alt=""><h3>ĐỊA CHỈ <br> <br> NHA KHOA <br> <br> THẨM MỸ <br> <br> UY TÍN <br> <br> HÀNG ĐẦU <br> <br> VIỆT NAM</h3>
         </div>
         <div class="basis_3_1_0__temp temp3">
             <div class="temp3__t5"><img src="img/t5-bg.jpg" alt=""><h3>HỆ THỐNG MÁY MÓC <br> TRANG THIẾT BỊ HIỆN ĐẠI</h3></div>
