--- a/themes/home/gioi-thieu.html
+++ b/themes/home/gioi-thieu.html
@@ -208,250 +208,105 @@
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="Home/slider_1_0_1/css/slider_1_0_1.css" />
-    <section class="slider_1_0_1">
-        <div class="slide_thumb2">
-            <a href="#" class="slider_1_0_1_item">
-                <img src="images/slider-1.jpg" alt="">
-            </a>
-        </div>
+    <link rel="stylesheet" type="text/css" href="Post/post_4_0_0/css/post_4_0_0.css" />
+    <section class="post_4_0_0">
+        <div class="post_4_0_0_byt">
+            <div class="post_4_0_0_byt__wrapper container">
+                <img class="post_4_0_0_byt__logo" src='images/logo-byt.png?ver=1' />
+                <div class="post_4_0_0_byt__container">
+                    <span class="post_4_0_0_byt__title">Bệnh viện thẩm mỹ Kangnam Sài Gòn </span>
+                    <span class="post_4_0_0_byt__desc">Được bộ y tế cấp phép</span>
 
+                </div>
+            </div>
+        </div>
+        <section class="post_4_0_0_history">
+            <div class="post_4_0_0_history__wrapper container">
+                <div class="post_4_0_0_history__content">
+                    <span class="post_4_4_0-title">I. Lịch sử hình thành và phát triển</span>
+                    <p>Bệnh viện Thẩm mỹ Kangnam Sài Gòn chính thức ra mắt ngày <b>3/12/2020</b>, được Bộ Y Tế cấp phép hoạt động khám bệnh, chữa bệnh với tư cách Bệnh viện chuyên khoa</p>
+                    <p>Kangnam Sài Gòn đầu tư cơ sở vật chất, trang thiết bị y tế hiện đại, cập nhật những công nghệ mới nhất về thẩm mỹ, thực hiện đa dạng các dịch vụ với danh mục đầy đủ hơn 500 dịch vụ. </p>
+                    <p>Với đội ngũ y bác sĩ, điều dưỡng dày dặn kinh nghiệm, có chứng chỉ hành nghệ và được đào tạo bài bản, Bệnh viện thẩm mỹ Kangnam Sài Gòn mong muốn sẽ đem đến cho khách hàng kết quả dịch vụ như ý và trải nghiệm khách hàng tuyệt vời nhất.
+                    </p>
+                </div>
+                <img src='images/kangnam-SG.jpg' />
+            </div>
+        </section>
+        <section class="post_4_0_0_intro">
+            <div class="container">
+                <span class="post_4_4_0-title">II. Sơ đồ tổ chức</span>
+                <img class="post_4_0_0_intro-img" src='images/diagram.jpg' />
+                <button class="post_4_0_0_intro-btn">Click để phóng to</button>
+            </div>
+        </section>
+        <section class="post_4_0_0_hr">
+            <div class="container">
+                <span class="post_4_4_0-title">III. Bộ máy nhân sự</span>
+                <div class="post_4_0_0_hr__content">
+
+                    <div class="post_4_0_0_hr__main">
+                        <div class="post_4_0_0_hr__title">Ban giám đốc</div>
+                        <ul class="post_4_0_0_hr__box1">
+                            <li>Giám đốc chuyên môn</li>
+                            <li style="border:none">Giám đốc vận hành</li>
+                        </ul>
+                        <ul class="post_4_0_0_hr__box2">
+                            <li>BS.CKI Lê Văn Quý</li>
+                            <li style="border:none">CN. Lê Thị Minh Đương</li>
+                        </ul>
+                    </div>
+
+                    <div class="post_4_0_0_hr__main">
+                        <div class="post_4_0_0_hr__title">Phòng chức năng</div>
+                        <ul class="post_4_0_0_hr__box1">
+                            <li>Phòng KHTH – CLBV</li>
+                            <li>Phòng HCNS</li>
+                            <li>Phòng tài chính – Kế toán</li>
+                            <li>Phòng Điều dưỡng KSNK</li>
+                            <li style="border:none">Phòng DVKH</li>
+                        </ul>
+                        <ul class="post_4_0_0_hr__box2">
+                            <li>BS. CKI Lê Viết Thanh</li>
+                            <li>CN. Hồ Thị Xuân Trang</li>
+                            <li>CN Đinh Thị Phương</li>
+                            <li>CNĐD. Nguyễn Thị Huyền Trang</li>
+                            <li style="border:none">Trương Thị Hồng Ngọc</li>
+                        </ul>
+                    </div>
+
+                    <div class="post_4_0_0_hr__main">
+                        <div class="post_4_0_0_hr__title">Khối lâm sàng</div>
+                        <ul class="post_4_0_0_hr__box1">
+                            <li>Khoa khám bệnh</li>
+                            <li>Khoa da liễu</li>
+                            <li>khoa Răng Hàm Mặt</li>
+                            <li>Khoa PTTM</li>
+                            <li style="border:none">Khoa GMHS</li>
+                        </ul>
+                        <ul class="post_4_0_0_hr__box2">
+                            <li>Bs. Bùi Đức Nhiên</li>
+                            <li>Bs. CKI Lê Thị Thủy</li>
+                            <li>Bs. Nguyễn Thị Kiều Trinh</li>
+                            <li>Bs. CKI Lê Thanh Sĩ</li>
+                            <li style="border:none">BS. CKII Trần Thị Ngọc Phượng</li>
+                        </ul>
+                    </div>
+
+                    <div class="post_4_0_0_hr__main">
+                        <div class="post_4_0_0_hr__title">Khối cận lâm sàng</div>
+                        <ul class="post_4_0_0_hr__box1">
+                            <li>Khoa Cận Lâm Sàng</li>
+                            <li style="border:none">Trưởng Khoa Dược - Thiết bị </li>
+                        </ul>
+                        <ul class="post_4_0_0_hr__box2">
+                            <li>Bs. CKI Nguyễn Quốc Tuấn</li>
+                            <li style="border:none">Ds. ĐH. Kiều Thị Huyền Trinh</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
-
-
-    <link rel="stylesheet" type="text/css" href="Home/service_15_0_0/css/service_15_0_0.css" />
-    <div class="service_15_0_0">
-        <div class="container">
-            <div class="service_15_0_0__box">
-                <div class="service_15_0_0__box2">
-                    <img src="images/t2-3.jpg" alt="">
-                    <div class="service_15_0_0__box3">
-                        <div class="service_15_0_0__title3">
-                            PHẪU THUẬT CĂNG DA
-                        </div>
-                    </div>
-                </div>
-                <div class="service_15_0_0__boxCt">
-                    <div class="service_15_0_0__title">DỊCH VỤ NỔI BẬT</div>
-                    <div class="service_15_0_0__box1">
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/catmi.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT TẠO MẮT 2 MÍ</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/nangmui.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT NÂNG MŨI KẾT HỢP CHẤT LIỆU ĐỘN</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/chinhham.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT CHỈNH SỬA GÓC HÀM</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/nangnguc.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT NÂNG VÚ BẰNG TÚI ĐỘN NGỰC</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/hutmo.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">HÚT MỠ</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/cangda.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT CĂNG DA</a></div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-    <link rel="stylesheet" type="text/css" href="Home/person_11_0_0/css/person_11_0_0.css" />
-    <div class="person_11_0_0">
-        <div class="container">
-            <div class="person_11_0_0_box">
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic1.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            QUÁN QUÂN HTLX MÙA 5
-                            <p>TRẦN THỊ THU HIỀN</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic2.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            BEAUTYUP
-                            <p>DV: BẢO TIÊN</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic3.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            Á QUÂN HTLX MÙA 4
-                            <p>PHAN THỊ MAY</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic1.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            QUÁN QUÂN HTLX MÙA 5
-                            <p>TRẦN THỊ THU HIỀN</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="Home/person_11_0_0/js/person_11_0_0.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="Home/video_12_0_0/css/video_12_0_0.css" />
-    <div class="video_12_0_0">
-        <div class="container">
-            <div class="video_12_0_0__title">
-                VIDEO NỔI BẬT
-            </div>
-            <div class="video_12_0_0__box">
-                <div class="video_12_0_0__video1">
-                    <div class="item1">
-                        <a href="#" class="modal-btn modal-clip" data-video="clze85py9JU" data-modal="modal-clip">
-                            <div class="pic">
-                                <img src="images/thumb-vid-1.jpg">
-                            </div>
-                            <div class="desc">
-                                Nhật ký Phẫu thuật thẩm mỹ của Hot Tiktoker Hồng Anh
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-                <div class="video_12_0_0__video2">
-
-                    <div class="item2">
-                        <a href="#" class="modal-btn modal-clip pic pic2" data-video="F1eR4TIKKrQ" data-modal="modal-clip">
-                            <img src="images/thumb-vid-2.jpg">
-                            <div class="desc">
-                                Diễn viên Bảo Tiên lột xác nóng bỏng sau nâng ngực
-                            </div>
-                        </a>
-                        <div class="desc2">
-                            Nhật ký "độ loa" của diễn viên Bảo Tiên
-                        </div>
-                    </div>
-                    <div class="item2">
-                        <a href="#" class="modal-btn modal-clip pic pic2" data-video="W2yJZcDHUuM" data-modal="modal-clip">
-                            <img src="images/thumb-vid-4.jpg">
-                            <div class="desc">
-                                Nhật ký Hút mỡ của ca sĩ “ngoại cỡ” Philippines - Alvir Antoine
-                            </div>
-                        </a>
-                        <div class="desc2">
-                            Ca sĩ Philipines và hành trình Hút mỡ tại Kangnam
-                        </div>
-                    </div>
-                    <div class="item2">
-                        <a href="#" class="modal-btn modal-clip pic pic2" data-video="trkW98oGg2E" data-modal="modal-clip">
-
-                            <img src="images/thumb-vid-3.jpg">
-                            <div class="desc">
-                                Hành trình chinh phục Đại sứ hoàn mỹ của người đẹp chuyển giới Trần Ngọc Sang
-                            </div>
-                        </a>
-                        <div class="desc2">
-                            Trần Ngọc Sang thẩm mỹ theo đổi ước mơ
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <link rel="stylesheet" type="text/css" href="Home/person_12_0_0/css/person_12_0_0.css" />
-    <section class="person_12_0_0">
-        <div class="person_12_0_0__container container">
-
-            <picture>
-                <source media="(max-width:540px) " srcset="images/person-mb.jpg">
-                <img class="person_12_0_0__person" src="images/person-pc.jpg">
-
-            </picture>
-            <div class="person_12_0_0__box">
-                <div class="person_12_0_0__title">
-                    <img src='images/person-title.png' class="person_12_0_0__title-img" />
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <link rel="stylesheet" type="text/css" href="Home/basis_9_0_0/css/basis_9_0_0.css" />
-    <div class="basis_9_0_0">
-        <div class="container">
-            <div class="basis_9_0_0__box">
-                <div class="basis_9_0_0__title">
-                    <p class="basis_9_0_0_tt">THẨM MỸ TIÊN PHONG</p>
-                    <p class="basis_9_0_0_cn">
-                        <B>CÔNG NGHỆ</B> HÀN QUỐC</p>
-                    <p class="basis_9_0_0_tp">
-                        Tiên phong cập nhật & chuyển giao công nghệ, máy móc tân tiến từ Hàn Quốc, Hoa Kỳ,... đem đến giải pháp thẩm mỹ tối ưu</p>
-                </div>
-                <img class="basis_9_0_0-mb" src="images/basis-mb.jpg" />
-            </div>
-        </div>
-    </div>
-
-    <link rel="stylesheet" type="text/css" href="Home/doctor_10_0_0/css/doctor_10_0_0.css" />
-    <section class="doctor_10_0_0">
-        <div class="container">
-            <div class="doctor_10_0_0__box">
-                <div class="doctor_10_0_0__item">
-                    <img src="images/person-logo.jpg" />
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-1.jpg" />
-                    <span>BS. Hà Văn Dần</span>
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-2.jpg" />
-                    <span>BS. Nguyễn Quốc Chí</span>
-
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-3.jpg" />
-                    <span>BS. Hoàng Hữu Tùng</span>
-
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-4.jpg" />
-                    <span>BS. Huỳnh Luân</span>
-
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-5.jpg" />
-                    <span>BS. Bùi Đức Nhiên</span>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
     <link rel="stylesheet" type="text/css" href="Footer/footer_5_0_0/css/footer_5_0_0.css" />
     <section class="footer_5_0_0">
         <div class="footer_5_0_0__container container">
@@ -518,15 +373,9 @@
             }
         }
         imgTheme('Header/header_20_0_0/', '.header_20_0_0 img')
-        imgTheme('Home/slider_1_0_1/', '.slider_1_0_1 img')
-        sourceTheme('Home/slider_1_0_1/', '.slider_1_0_1 source')
-        sourceTheme('Home/person_12_0_0/', '.person_12_0_0 source')
-        imgTheme('Home/service_15_0_0/', '.service_15_0_0 img')
-        imgTheme('Home/person_11_0_0/', '.person_11_0_0 img')
-        imgTheme('Home/video_12_0_0/', '.video_12_0_0 img')
-        imgTheme('Home/person_12_0_0/', '.person_12_0_0 img')
-        imgTheme('Home/basis_9_0_0/', '.basis_9_0_0 img')
-        imgTheme('Home/doctor_10_0_0/', '.doctor_10_0_0 img')
+        imgTheme('Post/post_4_0_0/', '.post_4_0_0 img')
+        sourceTheme('Post/post_4_0_0/', '.post_4_0_0 source')
+
 
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
     </script>
